deluge: update to version 1.2.3, use python26, update dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70539 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/deluge/Portfile
+++ b/dports/net/deluge/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem      1.0
-PortGroup       python25 1.0
+PortGroup       python26 1.0
 
 name            deluge
-version         1.1.9
+version         1.2.3
 categories      net gnome python
 maintainers     devans openmaintainer
 description     A GNOME BitTorrent client.
@@ -18,18 +18,23 @@ master_sites    http://download.deluge-torrent.org/source/
 
 use_bzip2       yes
 
-checksums       md5     38b9dbf255ed9620760d546dbb757882 \
-                sha1    20d035f75b42382e00cabb8a587866abb00d11fc \
-                rmd160  b1f23d8b0392d80e580444675238be7cd71a3c65
+checksums       md5     f1dbc8734c1881b115b98f572e523a4d \
+                sha1    3b6d727b7f4ce98734f3b980982c85515783c351 \
+                rmd160  eb71f07a618c9010e571931f937c16882f8029d8
 
 depends_lib-append \
+                port:libtorrent-rasterbar \
                 port:boost \
-                port:dbus-python25 \
+                port:dbus-python26 \
                 port:librsvg \
-                port:py25-chardet \
-                port:py25-gtk \
-                port:py25-distribute \
-                port:py25-xdg
+                port:py26-chardet \
+                port:py26-gtk \
+                port:py26-distribute \
+                port:py26-xdg \
+                port:py26-twisted \
+                port:py26-twisted-web2 \
+                port:py26-openssl \
+                port:py26-mako
 
 if { ![file exists ${prefix}/lib/libboost_python-mt.dylib] } {
         depends_lib-delete port:boost
@@ -40,27 +45,27 @@ pre-extract {
             if { [file exists ${prefix}/lib/libboost_system-mt.dylib] } {
                 ui_error "
 ****
-**** Deluge requires port boost installed with variant +python25.
+**** Deluge requires port boost installed with variant +python26.
 **** Please do the following then try installing deluge again:
 ****
 ****     sudo port deactivate boost
-****     sudo port install boost +python25
+****     sudo port install boost +python26
 ****
 
 "
             } else {
                 ui_error "
 ****
-**** Deluge requires port boost installed with variant +python25.
+**** Deluge requires port boost installed with variant +python26.
 **** Please do the following then try installing deluge again:
 ****
-****     sudo port install boost +python25
+****     sudo port install boost +python26
 ****
 
 "
             }
             
-            error "Deluge requires boost +python25"
+            error "Deluge requires boost +python26"
         }
 }
 
