Fixes ticket #26053.  When using Qt's Phonon, use #include <phonon...>, not <Phonon...>.  Use PKG_CONFIG to find optional QCA info (if installed), and let CMake figure it out.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70540 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kipi-plugins/Portfile
+++ b/dports/kde/kipi-plugins/Portfile
@@ -33,3 +33,12 @@ depends_lib         port:kdelibs4 \
                     port:gdk-pixbuf
 #port:opencv # This package does not build at the moment on Snow Leopard. If it is not installed, the removeRedEyes plugin will not get build automatically.
 configure.args-append ../${distname}
+configure.pkg_config_path-append ${qt_dir}/lib/pkgconfig
+
+post-extract {
+    # change #include <Phonon...> to <phonon...> in all files that
+    # contain that header.
+    foreach item [exec grep -lr "Phonon" ${workpath}/${distname}] {
+        reinplace "/#include/s@Phonon@phonon@" ${item}
+    }
+}
