inkscape: update configuration, dependencies, correctly configure compilation against python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70546 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/inkscape/Portfile
+++ b/dports/graphics/inkscape/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 name            inkscape
 conflicts       inkscape-devel
 version         0.47
-revision        3
+revision        4
 maintainers     devans
 categories      graphics gnome
 platforms       darwin
@@ -29,23 +29,24 @@ master_sites    sourceforge
 checksums       md5 7b497c8f673e40b05295a29f6e2111f4 \
                 sha1 7c75352f3882ebf4fcaebc22413bcb79bf3b7895
 
-depends_lib     port:libgnomeprintui \
-                port:boehmgc \
+depends_lib     port:boehmgc \
                 port:gsl \
                 port:gtkmm \
                 port:gnome-vfs \
-                port:libxslt \
                 port:lcms \
-                port:dbus \
-                port:dbus-glib \
-                port:py26-xml \
-                port:libcroco \
                 port:poppler \
-                port:py26-numpy \
-                port:py26-lxml \
                 port:boost \
                 port:ImageMagick \
                 port:libwpg
+
+#
+# external dependencies for included Python extensions
+#
+
+depends_lib-append \
+                port:py26-lxml \
+                port:py26-numpy \
+                port:py26-xml
 
 patchfiles      patch-configure.diff \
                 patch-poppler-0.12.2.diff
@@ -53,11 +54,10 @@ patchfiles      patch-configure.diff \
 configure.args  \
         --mandir=${prefix}/share/man \
         --with-xft \
-        --with-gnome-print \
         --with-gnome-vfs \
         --with-python \
         --enable-lcms \
-        --enable-inkboard
+        --enable-poppler-cairo
 
 configure.python \
         ${prefix}/bin/python2.6
