eggdbus: update to version 0.6, master_sites, livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70547 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/eggdbus/Portfile
+++ b/dports/devel/eggdbus/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 PortGroup       muniversal 1.0
 
 name            eggdbus
-version         0.5
+version         0.6
 maintainers     devans openmaintainer
 categories      devel
 platforms       darwin
@@ -15,13 +15,11 @@ long_description \
     ${description}
 
 homepage        http://www.freedesktop.org/Software/dbus
-master_sites    http://www.paldo.org/paldo/sources/eggdbus-1/
+master_sites    http://hal.freedesktop.org/releases/
 
-use_bzip2       yes
-
-checksums       md5     7bb55fada0bacd2f71ff26e274af55a0 \
-                sha1    db9937281333499148c35dbffbb4c21e0688f2db \
-                rmd160  cf4beaaf0920213b064b2f3228f1a5546d884a7b
+checksums       md5     b43d2a6c523fcb8b9d0b0300c4222386 \
+                sha1    d84b64773fef10516ea641f1e0913a2cf3991b05 \
+                rmd160  73bffd34c9289b0715d1442f425b6803af9baa7d
 
 patchfiles      patch-configure.diff
 
@@ -31,4 +29,6 @@ depends_build   port:pkgconfig \
 depends_lib     port:dbus-glib \
                 port:libxslt
 
-livecheck.type  none
+livecheck.type  regex
+livecheck.url   ${master_sites}
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
