--- a/dports/graphics/clutter/Portfile
+++ b/dports/graphics/clutter/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                clutter
-version             1.0.10
+version             1.2.12
 set branch          [string range $version 0 [expr [string last "." $version] - 1]]
 categories          graphics
 maintainers         devans openmaintainer
@@ -17,9 +17,9 @@ homepage            http://www.clutter-project.org/
 master_sites        http://www.clutter-project.org/sources/${name}/${branch}/
 use_bzip2           yes
 
-checksums           md5     bf48e85291cba33f3f149f4eefe759f0 \
-                    sha1    189684f0346bb895a2b47da64c02260c67e2810e \
-                    rmd160  7738b2603298a687bfa056f458e84080bc880d1e
+checksums           md5     76f70e765adcf7146be1ceb50bafa14f \
+                    sha1    70feff8c3c2bbf2d4ed7ed6ecae6ad04a464d499 \
+                    rmd160  6fc93feda3dcdd5f17ff7c40661211b078210b34
 
 depends_build       port:pkgconfig
 
@@ -27,6 +27,8 @@ depends_lib         port:gtk2 \
                     port:mesa \
                     port:xorg-libXdamage \
                     port:xorg-libXcomposite
+
+patchfiles          patch-clutter-glx-clutter-stage-glx.c.diff
 
 configure.args      --with-flavour=glx \
                     --with-imagebackend=gdk-pixbuf \
