libgnome-keyring: add dependency on eggdbus; see #26050
git-svn-id: https://svn.macports.org/repository/macports/trunk@70550 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgnome-keyring/Portfile
+++ b/dports/gnome/libgnome-keyring/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            libgnome-keyring
 version         2.30.1
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
@@ -28,7 +29,8 @@ depends_build   port:pkgconfig \
                 port:intltool
 
 depends_lib     port:libgcrypt \
-                port:gnome-keyring
+                port:gnome-keyring \
+                port:eggdbus
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
