Fix building CMake +universal to separately handle the post-configure patch. refs #25614
git-svn-id: https://svn.macports.org/repository/macports/trunk@70553 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/cmake/Portfile
+++ b/dports/devel/cmake/Portfile
@@ -40,7 +40,17 @@ post-patch {
 
 platform darwin {
 	post-configure {
-		reinplace "s|/usr/lib/libcurses|${prefix}/lib/libncurses|g" ${worksrcpath}/CMakeCache.txt
+		if {[variant_isset universal]} {
+			set dirs {}
+			foreach arch ${universal_archs_to_use} {
+				lappend dirs ${worksrcpath}-${arch}
+			}
+		} else {
+			set dirs ${worksrcpath}
+		}
+		foreach dir ${dirs} {
+			reinplace "s|/usr/lib/libcurses|${prefix}/lib/libncurses|g" ${dir}/CMakeCache.txt
+		}
 	}
 }
 
