devel/bzr: Disable apport, #26033
git-svn-id: https://svn.macports.org/repository/macports/trunk@70554 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bzr/Portfile
+++ b/dports/devel/bzr/Portfile
@@ -5,6 +5,7 @@ PortGroup     python26 1.0
 
 name          bzr
 version       2.2.0
+revision      1
 set branch    [join [lrange [split ${version} .] 0 1] .]
 categories    devel python
 platforms     darwin
@@ -26,7 +27,8 @@ checksums     md5     e47fa50e1fedc01c4761925e9d0d39ac \
               sha1    1cf1252df3ba31b2133a91d781db03ff832e14a6 \
               rmd160  65940081bcb7619b3e173c89c32cb9454b23371e
 
-patchfiles    patch-setup.py.diff
+patchfiles    patch-setup.py.diff \
+              patch-no-apport.diff
 
 depends_lib-append  port:py26-paramiko \
                     port:py26-crypto \
