graphics/xv: Drop maintainership
git-svn-id: https://svn.macports.org/repository/macports/trunk@70555 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/xv/Portfile
+++ b/dports/graphics/xv/Portfile
@@ -7,7 +7,7 @@ version                 3.10a
 set jumbo_version       20070520
 revision                6
 categories              graphics x11
-maintainers             raimue
+maintainers             nomaintainer
 
 description             xv is an interactive image manipulation program for \
                         the X Window System.
