--- a/dports/net/quvi/Portfile
+++ b/dports/net/quvi/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                quvi
-version             0.2.0
-revision            1
+version             0.2.2
 categories          net www
 license             GPLv3
 maintainers         openmaintainer snc
@@ -26,8 +25,7 @@ depends_lib         port:curl \
 
 master_sites        googlecode
 use_bzip2           yes
-checksums           md5     3f5c4060d147d2825634e5ea5c19a4e5 \
-                    sha1    5a93021ed1f39cddc6fccd8100fac75cc3ac5879 \
-                    rmd160  d13811f3da3946b79c5329cfd3c33f0715a4eac4
+checksums           md5     b483311b03c1ad53be0c4e27d7c07747 \
+                    sha1    cfeacf4c0a9958ba42ecab65098d71ecdcdd02f4
 
 configure.cppflags  -I${worksrcpath}/include -I${prefix}/include
