--- a/dports/net/cclive/Portfile
+++ b/dports/net/cclive/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                cclive
-version             0.6.3
+version             0.6.5
 categories          net www
 license             GPL
 maintainers         openmaintainer snc
@@ -20,9 +20,8 @@ depends_lib         port:quvi
 master_sites        googlecode
 use_bzip2           yes
 
-checksums           md5     07123fa1c5f8fd60a14d6ceaaf935a2c \
-                    sha1    7085619b93a3298eb63297a43484d33a88de6735 \
-                    rmd160  945d84659c1ce84853203587bef66a68c5299cee
+checksums           md5     c3d50c05ca332b01286f9f3b6dd21841 \
+                    sha1    2bb18c4d43775d728825c2d3b39157ae4c396e11
 
 destroot {
     xinstall -m 0755 ${worksrcpath}/src/cclive ${destroot}${prefix}/bin
