--- a/dports/devel/qjson/Portfile
+++ b/dports/devel/qjson/Portfile
@@ -11,13 +11,16 @@ maintainers         snc openmaintainer
 description         map JSON data to QVariant objects
 long_description    QJson is a qt-based library that maps JSON data to QVariant objects.
 
-homepage            http://qjson.sourceforge.net/
+homepage            http://gitorious.org/qjson/
 platforms           darwin
 
-master_sites        sourceforge
-use_bzip2           yes
+fetch.type          git
+git.url             git://gitorious.org/qjson/${name}.git
+git.branch          ${version}
 
-checksums           sha1    19bbef24132b238e99744bb35194c6dadece98f9 \
-                    rmd160  9b333dda51c70a8994d3203b238fe33ec3281af5
+configure.dir       ${workpath}/build
+build.dir           ${workpath}/build
 
-configure.args-append   ../${name}
+livecheck.type      regex
+livecheck.url       http://gitorious.org/qjson/${name}/trees/master
+livecheck.regex     >(\\d+(\\.\\d+)+)<
