update version, fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@70560 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/dbusmenu-qt/Portfile
+++ b/dports/devel/dbusmenu-qt/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           kde4 1.0
 
 name                dbusmenu-qt
-version             0.3.0
+version             0.5.2
 categories          devel kde4 kde
 maintainers         snc openmaintainer
 description         expose menus on DBus
@@ -18,3 +18,7 @@ depends_lib-append  port:qjson
 fetch.type          git
 git.url             git://gitorious.org/dbusmenu/dbusmenu-qt.git
 git.branch          ${version}
+
+livecheck.type      regex
+livecheck.url       http://gitorious.org/dbusmenu/${name}/trees/master
+livecheck.regex     >(\\d+(\\.\\d+)+)<
