--- a/dports/mail/milter-greylist/Portfile
+++ b/dports/mail/milter-greylist/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name	           	milter-greylist
-version         	4.0
+version         	4.2.6
 categories      	mail
 maintainers     	geeklair.net:dluke
 platforms		darwin
@@ -16,11 +16,13 @@ master_sites    ftp://ftp.espci.fr/pub/milter-greylist/
 
 extract.suffix	.tgz
 
-checksums       md5 2834933b27298d30630eea621cbfdcf5 \
-		sha1 e94c8c8a7ed5cf27550eb69f660c7d75c60f6ac1 \
-		rmd160 e84329491ea06044549aafbf65bf8adf4c01956b
-
+checksums	md5	2572068e2b1b5b47fe4239f0ddebbce2 \
+		sha1	cc62da42ae6fdbe85b20ba1cdcfa90e9cba05f3c \
+		rmd160	f9fecc13e8b20bbfae07da07b29d978da215d06e
+		
 depends_lib	port:libmilter
+
+use_parallel_build	no
 
 configure.args	--mandir=${prefix}/share \
 		--with-user=milter-greylist \
