--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100809040503
-set buildhash       g36ecb7
+set buildstamp      20100813040503
+set buildhash       gf007af
 version             0.7.5
-revision            12
+revision            13
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -37,8 +37,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    0610c2011a2d49b31e486a2982f0442beec3a046 \
-                    rmd160  d0ecb5d321f61850dc8ff5926280e36357740bc5
+checksums           sha1    bb1c45bf8afc565292d29f0cf83fba16648ac55a \
+                    rmd160  bfda95694e7f1e42d6e93d14d26628af60a25997
 
 #configure.optflags  -O0
 #configure.cflags-append -g
