etch: update to 3.16.0 (#26047) and indicate that this is noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@70565 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/etch/Portfile
+++ b/dports/sysutils/etch/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           ruby 1.0
 
 name                etch
-version             3.15.2
+version             3.16.0
 categories          sysutils
 maintainers         aput.net:jheiss openmaintainer 
 
@@ -25,14 +25,15 @@ platforms           darwin
 
 master_sites        sourceforge
 
-checksums           md5     be35b195b53bb272718e89995481f425 \
-                    sha1    cd1b41172e6911d609192ce71a908a3d359475ac \
-                    rmd160  3fcce4df874aec68becd66da9e822f014f263d58
+checksums           md5     5ee5d5aad12f4d5271ae8b676419948f \
+                    sha1    c1e4d4496e8edd9adf85d9893a5fc56935703946 \
+                    rmd160  5fd7d9e84e966a2031a30d4da49ab822bfca746c
 
 depends_build       port:rb-rake
 depends_run         port:facter
 
 worksrcdir          ${worksrcdir}/client
+supported_archs     noarch
 use_configure       no
 build               {}
 destroot.cmd        ${prefix}/bin/rake
