--- a/dports/php/php5-mysql/Portfile
+++ b/dports/php/php5-mysql/Portfile
@@ -4,7 +4,7 @@ PortSystem                      1.0
 PortGroup                       php5extension 1.0
 PortGroup                       archcheck 1.0
 
-php5extension.setup             {mysql mysqli pdo_mysql} 5.3.2 bundled
+php5extension.setup             {mysql mysqli pdo_mysql} 5.3.3 bundled
 categories-append               databases
 platforms                       darwin
 maintainers                     ryandesign
@@ -14,16 +14,20 @@ description                     a PHP interface to MySQL databases, including \
 
 long_description                ${description}
 
-checksums                       md5     46f500816125202c48a458d0133254a4 \
-                                sha1    79ea4ee3da3a7542d1e348ac963a5b38bcbb4b6b \
-                                rmd160  60a8aac0d51511ecaf8dcad9d31bdf072c0c99cf
+checksums                       md5     21ceeeb232813c10283a5ca1b4c87b48 \
+                                sha1    9f66716b341119e4e4f8fe3d81b7d0a5daf3cbc8 \
+                                rmd160  9edb51663feac9b787f8382012893f1ac98fec6a
 
 depends_lib-append              port:zlib
+
+patchfiles                      patch-ext-mysqli-php_mysqli_structs.h.diff
 
 configure.args-append           --with-zlib-dir=${prefix}
 
 use_parallel_build              yes
 
+# mysqlnd is broken as of php 5.3.3; see http://bugs.php.net/bug.php?id=52417
+if {0} {
 variant mysqlnd conflicts mysql4 mysql5 description {Use MySQL Native Driver} {
     configure.args-append       --with-mysql=mysqlnd \
                                 --with-mysqli=mysqlnd \
@@ -38,15 +42,16 @@ variant mysqlnd conflicts mysql4 mysql5 description {Use MySQL Native Driver} {
         }
     }
 }
+}
 
-variant mysql4 conflicts mysql5 mysqlnd description {Use MySQL 4 libraries} {
+variant mysql4 conflicts mysql5 description {Use MySQL 4 libraries} {
     depends_lib-append          port:mysql4
     archcheck.files-append      lib/mysql/libmysqlclient.dylib
     configure.args-append       --with-mysql=${prefix} \
                                 --with-pdo-mysql=${prefix}
 }
 
-variant mysql5 conflicts mysql4 mysqlnd description {Use MySQL 5 libraries} {
+variant mysql5 conflicts mysql4 description {Use MySQL 5 libraries} {
     depends_lib-append          path:bin/mysql_config5:mysql5
     archcheck.files-append      lib/mysql5/mysql/libmysqlclient.dylib
     configure.args-append       --with-mysql=${workpath}/mysql5 \
@@ -61,5 +66,5 @@ variant mysql5 conflicts mysql4 mysqlnd description {Use MySQL 5 libraries} {
 }
 
 if {![variant_isset mysql4] && ![variant_isset mysql5]} {
-    default_variants +mysqlnd
+    default_variants +mysql5
 }
