--- a/dports/x11/lndir/Portfile
+++ b/dports/x11/lndir/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem          1.0
 name                lndir
-version             1.0.1
+version             1.0.2
 categories          x11 sysutils
 maintainers         nomaintainer
 description         Create shadow dir of symbolic links to another tree
@@ -11,16 +11,16 @@ long_description    ${description}
 platforms           darwin
 
 homepage            http://www.x.org/
-master_sites        ${homepage}pub/individual/util/
+master_sites        http://xorg.freedesktop.org/archive/individual/util
 use_bzip2           yes
 
-checksums           md5     e274ea9f55dfd62afa0a7b1e1ab4ba96 \
-                    sha1    c7eed31c4cb2b016e4a06b629a57333c8df14421 \
-                    rmd160  a07e0b1bfae23e3c3ff018a06bc8bc916df1d32a
+checksums           md5     619acbb2ed766d7762f02328513b1f72 \
+                    sha1    bad5a03b82cd817e4a2a7d2e83b820326fb2a7b7 \
+                    rmd160  c4b97a3984712a2dddda5943069533d1346d47da
 
-depends_build       port:pkgconfig port:xorg-xproto
-
-configure.args      --mandir=${prefix}/share/man
+depends_build \
+        port:pkgconfig \
+        port:xorg-xproto
 
 livecheck.type      regex
 livecheck.regex     ${name}-(\[\\d.\]+)${extract.suffix}
