libcryptopp: * update to version 5.6.1 (closes #26069) * patch to prevent default universal compile * fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@70576 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libcryptopp/Portfile
+++ b/dports/devel/libcryptopp/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		    libcryptopp
-version             5.6.0
+version             5.6.1
 categories          devel security
 platforms           darwin
 maintainers         raphael openmaintainer
@@ -17,9 +17,9 @@ master_sites        sourceforge:cryptopp \
                     ${homepage}
 distname            cryptopp[strsed ${version} {g/\.//}]
 
-checksums           md5 36f35789ad60489d58003d3c849807e8 \
-                    sha1 b836783ebd72d5bc6a916620ab2b1ecec316fef1 \
-                    rmd160 82e5061ec76f23643ba5477ab28bbee6eebd393a
+checksums           md5 96cbeba0907562b077e26bcffb483828 \
+                    sha1 31dbb456c21f50865218c57b7eaf4c955a222ba1 \
+                    rmd160 a8a5b80c995c5d4ddafba228caf8866425212fbf
 
 use_zip             yes
 extract.mkdir	    yes
@@ -49,3 +49,6 @@ variant universal {
     build.env-delete    CXXFLAGS="${configure.cxx_archflags}"
     build.env-append    CXXFLAGS="${configure.universal_cxxflags}"
 }
+
+livecheck.type                  regex
+livecheck.regex                 "Crypto\\+\\+ (\\d+(?:\\.\\d+)*)"
