--- a/dports/devel/gettext/Portfile
+++ b/dports/devel/gettext/Portfile
@@ -23,7 +23,7 @@ checksums               md5     3dd55b952826d2b32f51308f2f91aa89 \
                         sha1    5009deb02f67fc3c59c8ce6b82408d1d35d4e38f \
                         rmd160  0ca0b6bf0219440404a86f0c16cbac3d1a2ecd37
 
-patchfiles              patch-gettext-tools-Makefile.in
+patchfiles              patch-gettext-tools-Makefile.in stpncpy.patch
 
 configure.cppflags      -no-cpp-precomp
 
