php5-postgresql: add postgresql90 variant; see #26073
git-svn-id: https://svn.macports.org/repository/macports/trunk@70578 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-postgresql/Portfile
+++ b/dports/php/php5-postgresql/Portfile
@@ -22,27 +22,34 @@ checksums                       md5     21ceeeb232813c10283a5ca1b4c87b48 \
 
 use_parallel_build              yes
 
-variant postgresql82 conflicts postgresql83 postgresql84 description {Use PostgreSQL 8.2 libraries} {
+variant postgresql82 conflicts postgresql83 postgresql84 postgresql90 description {Use PostgreSQL 8.2 libraries} {
     depends_lib-append          port:postgresql82
     archcheck.files-append      lib/postgresql82/libpq.dylib
     configure.args-append       --with-pgsql=${prefix}/lib/postgresql82/bin \
                                 --with-pdo-pgsql=${prefix}/lib/postgresql82/bin
 }
 
-variant postgresql83 conflicts postgresql82 postgresql84 description {Use PostgreSQL 8.3 libraries} {
+variant postgresql83 conflicts postgresql82 postgresql84 postgresql90 description {Use PostgreSQL 8.3 libraries} {
     depends_lib-append          port:postgresql83
     archcheck.files-append      lib/postgresql83/libpq.dylib
     configure.args-append       --with-pgsql=${prefix}/lib/postgresql83/bin \
                                 --with-pdo-pgsql=${prefix}/lib/postgresql83/bin
 }
 
-variant postgresql84 conflicts postgresql82 postgresql83 description {Use PostgreSQL 8.4 libraries} {
+variant postgresql84 conflicts postgresql82 postgresql83 postgresql90 description {Use PostgreSQL 8.4 libraries} {
     depends_lib-append          port:postgresql84
     archcheck.files-append      lib/postgresql84/libpq.dylib
     configure.args-append       --with-pgsql=${prefix}/lib/postgresql84/bin \
                                 --with-pdo-pgsql=${prefix}/lib/postgresql84/bin
 }
 
-if {![variant_isset postgresql82] && ![variant_isset postgresql83]} {
+variant postgresql90 conflicts postgresql82 postgresql83 postgresql84 description {Use PostgreSQL 9.0 libraries} {
+    depends_lib-append          port:postgresql90
+    archcheck.files-append      lib/postgresql90/libpq.dylib
+    configure.args-append       --with-pgsql=${prefix}/lib/postgresql90/bin \
+                                --with-pdo-pgsql=${prefix}/lib/postgresql90/bin
+}
+
+if {![variant_isset postgresql82] && ![variant_isset postgresql83] && ![variant_isset postgresql84] && ![variant_isset postgresql90]} {
     default_variants +postgresql84
 }
