--- a/dports/python/py-dpkt/Portfile
+++ b/dports/python/py-dpkt/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 PortGroup python24 1.0
 
 name                    py-dpkt
-version                 1.6
+version                 1.7
 categories-append       net
 maintainers             boeyms openmaintainer
 description             python packet creation and parsing library
@@ -12,10 +12,12 @@ long_description        dpkt provides fast, simple packet creation and \
                         parsing for python programs, with definitions for the \
                         basic TCP/IP protocols.
 platforms               darwin
+supported_archs         noarch
 
 homepage                http://code.google.com/p/dpkt/
-master_sites            http://dpkt.googlecode.com/files/
+master_sites            googlecode:dpkt
 distname                dpkt-${version}
-checksums               md5    5e8b48868dd2ad283089fd82ed41c408 \
-                        sha1   2a5ee8b44968b38ad4ee15112212ffc0ed2d8a5a \
-                        rmd160 e6e5f5a5d439d7c6eb165f5899903c167fd21551
+
+checksums               md5     0baa25fd5d87066cf6189a66cf452ac0 \
+                        sha1    df19d6eb9fb296cc6835c081a490eec4787ac824 \
+                        rmd160  f802d54c4619871a9168a168bd092497ac2f23ff
