--- a/dports/lang/eiffelstudio66/Portfile
+++ b/dports/lang/eiffelstudio66/Portfile
@@ -2,7 +2,7 @@
 PortSystem        1.0
 
 name              eiffelstudio66
-set minor_version 83355
+set minor_version 83873
 version           6.6.${minor_version}
 set branch        [join [lrange [split ${version} .] 0 1] ""]
 categories        lang
@@ -20,7 +20,8 @@ long_description  EiffelStudio is a development environment for the \
                   in particular "pick-and-drop" for effective browsing.
 homepage          http://www.eiffel.com
 master_sites      sourceforge:eiffelstudio:source \
-                  http://download.origo.ethz.ch/eiffelstudio/1715/:source \
+                  http://download.origo.ethz.ch/eiffelstudio/2048/:source \
+                  ftp://beta:beta57@ftp.eiffel.com/:source \
                   http://n.ethz.ch/student/roederja/download/:launcher \
                   http://www.jann-roeder.net/download/:launcher
 depends_lib       port:gtk2
@@ -36,7 +37,7 @@ distfiles         ${distname}${extract.suffix}:source \
 extract.only      ${distname}${extract.suffix}
 worksrcdir        PorterPackage
 
-checksums         ${distname}${extract.suffix} rmd160 935c8dbc618328c5519c775e43dda0a17f741700 \
+checksums         ${distname}${extract.suffix} rmd160 3ece22c555870f5d4228092f1cee585a8d4c8151 \
                   ${eiffel_launch} rmd160 f52af5b8b09ecdd21af4b1d89d2716597a9c1340
 
 use_configure     no
