Run latex twice when builing the documentation to resolve references.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70589 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/DoCon/Portfile
+++ b/dports/math/DoCon/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 name		DoCon
 set shortname	docon
 version		2.11
-revision	1
+revision	2
 categories	math devel
 maintainers	gwright
 platforms	darwin
@@ -36,6 +36,8 @@ variant printable_doc description {Build printable documentation} {
 		  depends_build bin:latex:texlive port:ghostscript
 
 		  post-destroot {
+			# Run latex twice to resolve references
+			system "cd ${workpath}/${shortname} && latex manual.lat"
 			system "cd ${workpath}/${shortname} && latex manual.lat"
 			system "cd ${workpath}/${shortname} && dvipdf manual"
 			file mkdir ${destroot}${prefix}/share/doc/${shortname}-${version}
