inkscape: update to version 0.48.0, update patchfiles, dependencies, add license.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70590 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/inkscape/Portfile
+++ b/dports/graphics/inkscape/Portfile
@@ -5,8 +5,8 @@ PortSystem 1.0
 
 name            inkscape
 conflicts       inkscape-devel
-version         0.47
-revision        4
+version         0.48.0
+license         GPLv2
 maintainers     devans
 categories      graphics gnome
 platforms       darwin
@@ -26,8 +26,10 @@ universal_variant no
 
 use_bzip2       yes
 master_sites    sourceforge
-checksums       md5 7b497c8f673e40b05295a29f6e2111f4 \
-                sha1 7c75352f3882ebf4fcaebc22413bcb79bf3b7895
+
+checksums       md5     fd8b17a3f06668603807176a77167bb9 \
+                sha1    a2ab9b34937cc4f2b482c9b3720d8fd4dc7b12e8 \
+                rmd160  fe10b77f10e922a911e7117922d7553ed11d00dd
 
 depends_lib     port:boehmgc \
                 port:gsl \
@@ -37,7 +39,8 @@ depends_lib     port:boehmgc \
                 port:poppler \
                 port:boost \
                 port:ImageMagick \
-                port:libwpg
+                port:libwpg \
+                port:gtkspell2
 
 #
 # external dependencies for included Python extensions
@@ -48,8 +51,7 @@ depends_lib-append \
                 port:py26-numpy \
                 port:py26-xml
 
-patchfiles      patch-configure.diff \
-                patch-poppler-0.12.2.diff
+patchfiles      patch-configure.diff
 
 configure.args  \
         --mandir=${prefix}/share/man \
