--- a/dports/databases/sqlite3/Portfile
+++ b/dports/databases/sqlite3/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			sqlite3
 version			3.7.0.1
+revision                1
 categories		databases
 platforms		darwin
 maintainers		mww openmaintainer
@@ -33,7 +34,7 @@ configure.args	--enable-threadsafe --disable-tcl \
 			--with-readline-inc="-I${prefix}/include" \
 			--with-readline-lib="-L${prefix}/lib -lreadline -lm -lncurses"
 # search in worksrcpath for sqlite3.h first -- dont pick up an installed one!
-configure.cppflags	"-DSQLITE_ENABLE_COLUMN_METADATA=1 -I${worksrcpath} -I${prefix}/include"
+configure.cppflags	"-DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_ENABLE_FTS3=1 -DSQLITE_ENABLE_RTREE=1 -DSQLITE_SECURE_DELETE=1 -DSQLITE_ENABLE_UNLOCK_NOTIFY=1 -I${worksrcpath} -I${prefix}/include"
 
 use_parallel_build	no
 build.type		gnu
