www/mediawiki - update to 1.16.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@70596 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/mediawiki/Portfile
+++ b/dports/www/mediawiki/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem          1.0
 name                mediawiki
-version             1.15.5
+version             1.16.0
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          www php
 maintainers         blb openmaintainer
@@ -18,19 +18,15 @@ platforms           darwin freebsd
 homepage            http://www.mediawiki.org
 master_sites        http://download.wikimedia.org/mediawiki/${branch}/
 
-checksums           md5     01c4c85fb96991d962c8acb3d892ec2d \
-                    sha1    b157fe37bb89c78e5ffa0f27b14beb886db3a5f4 \
-                    rmd160  5113beb1df46c56275a90d5a1cb85c2b01ca541f
+checksums           md5     0a2177b5eb4be2b5a585ab28070fec13 \
+                    sha1    41d6dc0530eb00fd96f48690b8d7041d2b7fd7f3 \
+                    rmd160  dc65164fd92bdfbc22992652cd31789d08527936
 
 depends_run         port:libiconv port:jpeg port:jasper port:tiff port:lcms \
                     port:libpng port:freetype port:libxml2 port:jbigkit \
                     port:expat port:fontconfig port:ghostscript \
                     port:ImageMagick port:pkgconfig port:aspell \
                     port:php5-web
-
-# Fix an outdated KHTML hack which affects newer WebKit
-# https://bugs.webkit.org/show_bug.cgi?id=28350
-patchfiles          patch-skins_common_wikibits.js.diff
 
 use_configure       no
 
@@ -53,20 +49,17 @@ If you are upgrading, read:
 
    http://www.mediawiki.org/wiki/Manual:Upgrading
 
-For a new install, make sure ${docpath}/AdminSettings.php has correct \
-information.
+For an upgrade, ${docpath}/AdminSettings.php is no longer needed as of \
+1.16.0 so its settings can be migrated into ${docpath}/LocalSettings.php; \
+see https://bugzilla.wikimedia.org/show_bug.cgi?id=18768 for details.
 
-For an upgrade, ${docpath}/AdminSettings.php will not be modified, so make \
-sure it is correct and anything in ${docpath}/AdminSettings.sample which you \
-need, has been copied to ${docpath}/AdminSettings.php.
+Finally, be sure to have a look at ${docpath}/UPGRADE and possibly \
+${docpath}/RELEASE-NOTES for all the details of performing an upgrade.
+
+Make sure to use MacPorts' php for running the command line scripts, e.g.
+
+   ${prefix}/bin/php update.php
 "
-
-post-activate {
-   if {![file exists ${docpath}/AdminSettings.php]} {
-      xinstall -m 660 ${docpath}/AdminSettings.sample \
-         ${docpath}/AdminSettings.php
-   }
-}
 
 variant mysql4 description "Deprecated variant, use just +mysql" {}
 if {[variant_isset mysql4]} {
