--- a/dports/www/mediawiki/Portfile
+++ b/dports/www/mediawiki/Portfile
@@ -3,9 +3,11 @@
 PortSystem          1.0
 name                mediawiki
 version             1.16.0
+revision            1
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          www php
 maintainers         blb openmaintainer
+supported_archs     noarch
 description         The wiki engine used by Wikipedia
 long_description \
    MediaWiki is the collaborative editing software that runs Wikipedia, the \
