moodle: udpate to 1.9.9, add mysql and postgresql variants, remove pre-compiled mimetex binaries; see #26071
git-svn-id: https://svn.macports.org/repository/macports/trunk@70599 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/moodle/Portfile
+++ b/dports/www/moodle/Portfile
@@ -3,12 +3,13 @@
 PortSystem              1.0
 
 name                    moodle
-version                 1.9.5
+version                 1.9.9
 set branch              [join [lrange [split ${version} .] 0 1] {}]
 categories              www
 platforms               darwin freebsd
 maintainers             nomaintainer
 license                 GPLv2
+supported_archs         noarch
 homepage                http://moodle.org/
 master_sites            http://download.moodle.org/stable${branch}
 extract.suffix          .tgz
@@ -22,18 +23,36 @@ long_description        Moodle is a course management system (CMS) - a free, Ope
                         computer you have handy (including webhosts), yet it can scale from a \
                         single-teacher site to a 40,000-student University.
 
-checksums               md5     41a3258c2f09dbc7b36fec960bcf4e19 \
-                        sha1    ba4df96c62c28fcd3f5b59583db60919a389037e \
-                        rmd160  3553e5437ae862a7ec4cf443c396ad383a787206
+checksums               md5     f47d350b0b337b3057da550ea88f8695 \
+                        sha1    936eaa405cef8722c31f6a0a385fee7fa9999919 \
+                        rmd160  a44406d71829c88d5ad21a3368b62c76c420c7e7
 
-depends_lib             port:php5-web \
-                        port:php5-mysql
+depends_lib             port:php5-web
+
+post-extract {
+    # Remove pre-compiled binaries of mimetex; if mimetex is desired, make a port for it.
+    foreach f {mimetex.darwin mimetex.exe mimetex.freebsd mimetex.linux} {
+        delete ${worksrcpath}/filter/tex/${f}
+    }
+}
 
 use_configure           no
 build                   {}
 
 destroot {
     file copy ${worksrcpath} ${destroot}${prefix}/www/moodle
+}
+
+variant mysql description {Use MySQL} {
+    depends_lib-append  port:php5-mysql
+}
+
+variant postgresql description {Use PostgreSQL} {
+    depends_lib-append  port:php5-postgresql
+}
+
+if {![variant_isset mysql] && ![variant_isset postgresql]} {
+    default_variants    +mysql
 }
 
 livecheck.type          regex
