moodle: fix tex filter's settings to default to MacPorts versions of latex, dvips and convert, not Fink's, and add dependencies on the ports that provide these programs
git-svn-id: https://svn.macports.org/repository/macports/trunk@70600 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/moodle/Portfile
+++ b/dports/www/moodle/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 
 name                    moodle
 version                 1.9.9
+revision                1
 set branch              [join [lrange [split ${version} .] 0 1] {}]
 categories              www
 platforms               darwin freebsd
@@ -29,11 +30,20 @@ checksums               md5     f47d350b0b337b3057da550ea88f8695 \
 
 depends_lib             port:php5-web
 
+depends_run             path:bin/latex:texlive-latex \
+                        path:bin/dvips:texlive-bin \
+                        path:bin/convert:ImageMagick
+
 post-extract {
     # Remove pre-compiled binaries of mimetex; if mimetex is desired, make a port for it.
     foreach f {mimetex.darwin mimetex.exe mimetex.freebsd mimetex.linux} {
         delete ${worksrcpath}/filter/tex/${f}
     }
+}
+
+patchfiles              patch-prefix.diff
+post-patch {
+    reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/filter/tex/filtersettings.php
 }
 
 use_configure           no
