makeself: update to 2.1.5 and use 'supported_archs noarch'
git-svn-id: https://svn.macports.org/repository/macports/trunk@70601 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/makeself/Portfile
+++ b/dports/archivers/makeself/Portfile
@@ -3,10 +3,12 @@
 PortSystem      1.0
 
 name            makeself
-version         2.1.4
+version         2.1.5
 categories      archivers
 platforms       darwin
 maintainers     nomaintainer
+supported_archs noarch
+
 description     A small shell script that generates a self-extractable archives
 
 long_description \
@@ -19,9 +21,9 @@ homepage        http://www.megastep.org/makeself/
 master_sites    ${homepage}
 extract.suffix  .run
 
-checksums       md5 43289565b68c3490a6904c4aed004d51 \
-                sha1 dbdd0b879c28ffba2dd5fb0ca20d3998edd3c8ea \
-                rmd160 ae8557d939de63b6767c4890d5761a62e4013a2a
+checksums       md5     85f03bd3602fd55debec6ae449f7c15c \
+                sha1    803ca42ea64e51af72a4ee50b4d8f7a6107c926d \
+                rmd160  31e718793aa417e9b4cf4977b73459ffded19409
 
 patchfiles      patch-makeself.sh
 
@@ -48,6 +50,3 @@ destroot {
     xinstall -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} COPYING README TODO ${destroot}${docdir}
 }
-
-universal_variant   no
-
