--- a/dports/aqua/MacBiff/Portfile
+++ b/dports/aqua/MacBiff/Portfile
@@ -4,35 +4,32 @@ PortSystem              1.0
 PortGroup               xcode 1.0
 
 name                    MacBiff
-version                 1.1.11
-revision                1
+version                 1.1.15
 categories              aqua net
 maintainers             nomaintainer
-description             IMAP Email checker
+license                 GPL-2+
 
-long_description        MacBiff is a GPL'd Mac OS X 10.3 (and greater) "Biff" \
-                        Program. It periodically checks your IMAP server for \
-                        new email, and reports where in your folder hierarchy \
-                        your new mail resides.
+description             IMAP email checker
 
-homepage                http://www.forkit.org/macbiff/
-master_sites            ${homepage}archive/
-use_bzip2               yes
+long_description        ${name} periodically checks your IMAP server for new \
+                        email and tells you where in your folder hierarchy it \
+                        resides.
+
+homepage                http://macbiff.sourceforge.net/
+master_sites            sourceforge:macbiff
 distname                macbiff-${version}
-worksrcdir              ${name}
 
-patchfiles              patch-main.m
+checksums               md5     4040140e2a6cc8a2a931f7a06fe7bb3a \
+                        sha1    9f2ffc99ca1d2d0ea89ff2703cac56af2dab61ab \
+                        rmd160  e4369707ced0605c170f2841960ea497ed169e1d
 
-checksums               md5     2bea0866c2d6fe05e8204cfb2e2f916d \
-                        sha1    63efebd8a5763f29abfc4c021ebc64cc7ee984c1 \
-                        rmd160  f40a9f27dd1f395d6c53ae160c63b01ecb6a2a8d
+extract.mkdir           yes
 
-universal_variant       no
-
-variant growl description {Add Growl support} {
-        depends_lib-append      port:Growl
-        xcode.build.settings    OTHER_CFLAGS=-DUSE_GROWL
-        reinplace "s|AppBridge||" ${worksrcpath}/${name}.m
+pre-fetch {
+    if {${os.major} < 9} {
+        ui_error "${name} ${version} requires Mac OS X 10.5 or greater."
+        return -code error "incompatible Mac OS X version"
+    }
 }
 
 livecheck.type          regex
