--- a/dports/sysutils/mdate/Portfile
+++ b/dports/sysutils/mdate/Portfile
@@ -1,35 +1,49 @@
 # $Id$
 
-PortSystem 1.0
+PortSystem              1.0
 
-name		mdate
-version		1.5.1
-categories	sysutils
-platforms	darwin freebsd
-maintainers	nomaintainer
-description	utility that converts Gregorian dates to Mayan Long Count dates
-long_description	${description}
+name                    mdate
+version                 1.5.1
+categories              sysutils
+platforms               darwin freebsd
+maintainers             nomaintainer
 
-homepage	http://mdate.sourceforge.net/
-master_sites	sourceforge
-checksums		md5 a759efa3838a990f4e5332d45fa89cab
+description             utility that converts Gregorian dates to Mayan Long Count dates
 
-use_configure	no
+long_description        ${description}
 
-platform darwin	{
-	build.target	target=osx
+homepage                http://mdate.sourceforge.net/
+master_sites            sourceforge
+
+checksums               md5     a759efa3838a990f4e5332d45fa89cab
+
+use_configure           no
+
+platform darwin {
+    build.target        target=osx
 }
 
-platform freebsd	{
-	build.target	target=freebsd
+platform freebsd {
+    build.target        target=freebsd
 }
 
-destroot	{
-	xinstall -s -m 755 ${worksrcpath}/mdate ${destroot}${prefix}/bin
-	xinstall -m 644 ${worksrcpath}/mdate.1 \
-		${destroot}${prefix}/share/man/man1
-	xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-	xinstall -m 644 -W ${worksrcpath} API AUTHORS BUGS ChangeLog NEWS \
-		README Translators mdate-1.html mdate-2.html mdate-3.html \
-		mdate-4.html mdate.html ${destroot}${prefix}/share/doc/${name}
+destroot {
+    xinstall -s -m 755 ${worksrcpath}/mdate ${destroot}${prefix}/bin
+    xinstall -m 644 ${worksrcpath}/mdate.1 ${destroot}${prefix}/share/man/man1
+    
+    xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 644 -W ${worksrcpath} \
+        API \
+        AUTHORS \
+        BUGS \
+        ChangeLog \
+        NEWS \
+        README \
+        Translators \
+        mdate-1.html \
+        mdate-2.html \
+        mdate-3.html \
+        mdate-4.html \
+        mdate.html \
+        ${destroot}${prefix}/share/doc/${name}
 }
