meanwhile: whitespace changes only
git-svn-id: https://svn.macports.org/repository/macports/trunk@70605 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/meanwhile/Portfile
+++ b/dports/net/meanwhile/Portfile
@@ -1,21 +1,29 @@
 # $Id$
 
-PortSystem 1.0
+PortSystem              1.0
 
-name			meanwhile
-version			1.0.1
-categories		net
-platforms		darwin
-maintainers		nomaintainer
-description		Open Source implementation of the Lotus Sametime protocol
-long_description	The Meanwhile Project is an open implementation of the \
-				Lotus Sametime Community Client protocol.
+name                    meanwhile
+version                 1.0.1
+categories              net
+platforms               darwin
+maintainers             nomaintainer
 
-homepage		http://meanwhile.sourceforge.net/
-master_sites	sourceforge
-checksums		md5 85587678afdf7bf1f5ea3bdefec093ba
-patchfiles		patch-doc-Makefile.in patch-samples-Makefile.in
+description             Open Source implementation of the Lotus Sametime protocol
 
-depends_build	port:pkgconfig port:doxygen
-depends_lib		port:gettext path:lib/pkgconfig/glib-2.0.pc:glib2 port:libiconv
+long_description        The Meanwhile Project is an open implementation of the \
+                        Lotus Sametime Community Client protocol.
 
+homepage                http://meanwhile.sourceforge.net/
+master_sites            sourceforge
+
+checksums               md5     85587678afdf7bf1f5ea3bdefec093ba
+
+patchfiles              patch-doc-Makefile.in \
+                        patch-samples-Makefile.in
+
+depends_build           port:pkgconfig \
+                        port:doxygen
+
+depends_lib             port:gettext \
+                        path:lib/pkgconfig/glib-2.0.pc:glib2 \
+                        port:libiconv
