mdate: update to 1.5.6, ensure we're UsingTheRightCompiler, support universal and non-default-build_arch builds
git-svn-id: https://svn.macports.org/repository/macports/trunk@70606 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/mdate/Portfile
+++ b/dports/sysutils/mdate/Portfile
@@ -3,7 +3,7 @@
 PortSystem              1.0
 
 name                    mdate
-version                 1.5.1
+version                 1.5.6
 categories              sysutils
 platforms               darwin freebsd
 maintainers             nomaintainer
@@ -14,10 +14,22 @@ long_description        ${description}
 
 homepage                http://mdate.sourceforge.net/
 master_sites            sourceforge
+distname                Mdate-${version}
 
-checksums               md5     a759efa3838a990f4e5332d45fa89cab
+checksums               md5     813edcde16cac96afddcf4be9342a82d \
+                        sha1    3a79e550e34774c247c792cc268f8c65f59fcee1 \
+                        rmd160  8af75f2c45944c612f9330e42c9d29b77d44a924
 
 use_configure           no
+
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+
+build.args              CXX="${configure.cxx} ${archflags}"
 
 platform darwin {
     build.target        target=osx
