meanwhile: update to 1.0.2, autoreconf for a proper universal build, move docs to standard MacPorts location
git-svn-id: https://svn.macports.org/repository/macports/trunk@70607 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/meanwhile/Portfile
+++ b/dports/net/meanwhile/Portfile
@@ -3,7 +3,7 @@
 PortSystem              1.0
 
 name                    meanwhile
-version                 1.0.1
+version                 1.0.2
 categories              net
 platforms               darwin
 maintainers             nomaintainer
@@ -16,7 +16,9 @@ long_description        The Meanwhile Project is an open implementation of the \
 homepage                http://meanwhile.sourceforge.net/
 master_sites            sourceforge
 
-checksums               md5     85587678afdf7bf1f5ea3bdefec093ba
+checksums               md5     bf4ced109a367b4c5d71fe63c043270e \
+                        sha1    e0e9836581da3c4a569135cb238eaa566c324540 \
+                        rmd160  2ae78a2f5586c1a106c462c19018872308dd6af0
 
 patchfiles              patch-doc-Makefile.in \
                         patch-samples-Makefile.in
@@ -27,3 +29,10 @@ depends_build           port:pkgconfig \
 depends_lib             port:gettext \
                         path:lib/pkgconfig/glib-2.0.pc:glib2 \
                         port:libiconv
+
+# Universal dylibs, please
+use_autoreconf          yes
+
+post-destroot {
+    move ${destroot}${prefix}/share/doc/${name}-doc-${version} ${destroot}${prefix}/share/doc/${name}
+}
