--- a/dports/net/meanwhile/files/patch-doc-Makefile.in
+++ b/dports/net/meanwhile/files/patch-doc-Makefile.in
@@ -1,6 +1,6 @@
---- doc/Makefile.in	2005-12-16 18:27:40.000000000 +0100
-+++ doc/Makefile.in	2005-12-29 08:56:17.000000000 +0100
-@@ -171,9 +171,9 @@
+--- doc/Makefile.in.orig	2005-12-29 19:55:16.000000000 -0600
++++ doc/Makefile.in	2010-08-14 21:59:17.000000000 -0500
+@@ -172,9 +172,9 @@
  target_alias = @target_alias@
  noinst_DATA = Doxyfile
  @ENABLE_DOXYGEN_TRUE@htmldoc_DATA = html/*
