--- a/dports/net/meanwhile/files/patch-samples-Makefile.in
+++ b/dports/net/meanwhile/files/patch-samples-Makefile.in
@@ -1,6 +1,6 @@
---- samples/Makefile.in	2005-12-16 18:27:41.000000000 +0100
-+++ samples/Makefile.in	2005-12-29 09:00:18.000000000 +0100
-@@ -187,7 +187,7 @@
+--- samples/Makefile.in.orig	2005-12-29 19:55:17.000000000 -0600
++++ samples/Makefile.in	2010-08-14 21:59:17.000000000 -0500
+@@ -188,7 +188,7 @@
  	README \
  	$(SAMPLES_SRC)
  
