xaos: whitespace changes only
git-svn-id: https://svn.macports.org/repository/macports/trunk@70618 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/xaos/Portfile
+++ b/dports/graphics/xaos/Portfile
@@ -12,35 +12,34 @@ platforms               darwin
 master_sites            sourceforge
 distname                XaoS-${version}
 
-description \
-	real-time interactive fractal zoomer
+description             real-time interactive fractal zoomer
 
-long_description \
-	XaoS is a fast portable real-time interactive fractal zoomer. \
-	It displays the Mandelbrot set (among other escape time fractals) \
-	and allows you zoom smoothly into the fractal. Various coloring \
-	modes are provided for both the points inside and outside the \
-	selected set. In addition, switching between Julia and Mandelbrot \
-	fractal types and on-the-fly plane switching is provided. The \
-	first version was a minimal X Window Mandelbrot viewer by Thomas \
-	later modified by Jan to support high frame-rate zooming. Other \
-	additions were later made by both Thomas and Jan including \
-	autopilot (for those of you without drivers licenses), palette \
-	changing, GIF saving, and fractal inversion.
+long_description        XaoS is a fast portable real-time interactive \
+                        fractal zoomer. It displays the Mandelbrot set \
+                        (among other escape time fractals) and allows you \
+                        zoom smoothly into the fractal. Various coloring \
+                        modes are provided for both the points inside and \
+                        outside the selected set. In addition, switching \
+                        between Julia and Mandelbrot fractal types and \
+                        on-the-fly plane switching is provided. The first \
+                        version was a minimal X Window Mandelbrot viewer \
+                        by Thomas later modified by Jan to support high \
+                        frame-rate zooming. Other additions were later \
+                        made by both Thomas and Jan including autopilot \
+                        (for those of you without drivers licenses), \
+                        palette changing, GIF saving, and fractal inversion.
 
-checksums        md5     366fd8151e9642a0d9afce889912e388 \
-                 sha1    4e419715ae0479fa3a20ed5f48ede7ad222f2d10 \
-                 rmd160  37ce4728940e80c2876792650aa656236893d5f7
+checksums               md5     366fd8151e9642a0d9afce889912e388 \
+                        sha1    4e419715ae0479fa3a20ed5f48ede7ad222f2d10 \
+                        rmd160  37ce4728940e80c2876792650aa656236893d5f7
 
-depends_lib \
-	port:xorg-libXext \
-	port:libpng
+depends_lib             port:xorg-libXext \
+                        port:libpng
 
-configure.cflags-append "-I${prefix}/include"
-configure.args \
-	--with-long-double=yes \
-	--disable-nls \
-	--mandir=${prefix}/share/man \
-	--infodir=${prefix}/share/info \
-	--x-includes=${prefix}/include --x-libraries=${prefix}/lib
-
+configure.cflags-append -I${prefix}/include
+configure.args          --with-long-double=yes \
+                        --disable-nls \
+                        --mandir=${prefix}/share/man \
+                        --infodir=${prefix}/share/info \
+                        --x-includes=${prefix}/include \
+                        --x-libraries=${prefix}/lib
